# AttractorScaffolding

./: CMakeLists.txt  README.md
combinatorics/: .gitignore  combinatorics.tex
configs/: .gitignore  evolve_c2.json  evolve_c2_short.json  evolve_c3.json  evolve_c4.json  evolve_four.json  evolve_ia1_ip0_a21_p10_p0.1.json  evolve_three.json  evolve_three_1.json  runevolve_c2_fitinc.json  runevolve_c2_targbits_1ham.json  runevolve_c2_targbits_2ham.json  runevolve_c2_targbits_3ham.json  runevolve_c2_targbits_4ham.json  runevolve_c2_targbits_5ham.json  runevolve_c3_targbits_10ham.json  runevolve_c3_targbits_12ham.json  runevolve_c3_targbits_4ham.json  runevolve_c3_targbits_6ham.json  runevolve_c3_targbits_8ham.json  runevolve_c3_tmp.json
cover/: Cover.docx  Presubmission.docx  WilsonPLoSCBPresubmission.docx  WilsonPLoSCBcover.docx  coverInterface.docx
data/: README.md  complexity_fit.csv  complexity_random.csv  drift_a21_p10_ff4_100000000_gens_0.1.csv  drift_a21_p10_ff4_100000000_gens_0.2.csv  drift_a21_p10_ff4_100000000_gens_0.3.csv  drift_a21_p10_ff4_100000000_gens_0.4.csv  drift_a21_p10_ff4_100000000_gens_0.5.csv  evolve_a21_p10_ff4_100000000_gens_0.04.csv  evolve_a21_p10_ff4_100000000_gens_0.1.csv  evolve_a21_p10_ff4_100000000_gens_0.25.csv  evolve_a21_p10_ff4_100000000_gens_0.35.csv  evolve_a21_p10_ff4_100000000_gens_0.4.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.02.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.04.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.05.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.07.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.1.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.12.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.15.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.17.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.25.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.3.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.35.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.4.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.45.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.5.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.02.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.03.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.04.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.05.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.07.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.1.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.12.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.15.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.17.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.25.csv  evolve_nc2_I16-0_T21-10_ff4_1000_fits_0.3.csv  (+138 more)
data_fitinc/: evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.1.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.4.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.5.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gensplus_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_10000000_gens_0.3.csv  evolve_nc2_I16-0_T21-10_ff4_10000000_gensplus_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_10000000_gensplus_0.3.csv  evolve_nc2_I16-0_T21-10_ff4_10000000_gensplus_0.5.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gens_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gens_0.3.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gens_0.5.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gensplus_0.1.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gensplus_0.2.csv  evolve_nc2_I16-0_T21-10_ff4_1000000_gensplus_0.3.csv
data_targbits/: evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.05.csv  evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.1.csv  evolve_nc2_I16-0_T21-23_ff4_100000000_gens_0.1.csv  evolve_nc2_I16-0_T21-26_ff4_100000000_gens_0.1.csv  evolve_nc2_I16-0_T21-30_ff4_100000000_gens_0.05.csv  evolve_nc3_I16-4-1_T20-10-5_ff4_100000000_gens_0.05.csv  evolve_nc3_I16-4-1_T20-10-5_ff4_100000000_gens_0.1.csv  evolve_nc3_I8-4-1_T20-10-5_ff4_100000000_gens_0.05.csv  evolve_nc3_I8-4-1_T21-10-5_ff4_100000000_gens_0.1.csv
dataj/: evolve_nc2_I16-0_T21-10_ff4_100000000_gens_0.03.csv  evolve_nc3_I16-4-1_T20-5-10_ff4_1000000000_gens_0.01.csv  (+38 more)
factorial/: CMakeLists.txt  binomial.cpp  facs.cpp  lmp.h  pascals.cpp  readme.txt  testfac.cpp  xmath.h
sim/: CMakeLists.txt  README.md  complexity_fit.cpp  complexity_random.cpp  evolve.cpp  evolve_fit_genome.cpp  evolve_json.cpp  evolve_onegen.cpp  fitness4.h  fitness5.h  fitness6.h  mutation.cpp  prob_fitinc_bybits.cpp  prop_fit_canalyzing.cpp  propcanalyzing.cpp  proprandomfits.cpp  quine.cpp
sim/include/: fitness0.h  fitness3.h  fitness4.h  fitness8.h  lib.h  quin.h  quine.h  rng.h
sim_supp/: CMakeLists.txt  README.md  analyse_genome.cpp  bitflipping.cpp  complexity_fit.cpp  complexity_random.cpp  drift.cpp  estimate_fitness_dist.cpp  estimate_shared_terminations.cpp  estimate_zero_fits.cpp  evolve_async.cpp  evolve_bybits.cpp  fitness_of_ten.cpp  flip_stats.cpp  mutatestream.cpp  mutation.cpp  nullmodel.cpp  prob_fitinc.cpp  prob_fitinc_bybits.cpp  prop_fit_canalyzing.cpp  propcanalyzing.cpp  quine.cpp  showfitness.cpp
simsj/factorial/: CMakeLists.txt  fac_a_over_b.cpp  factorial.cpp  h_m.cpp
simsj/sim/: CMakeLists.txt  README.md  analyse_genome.cpp  basins.h  bitflipping.cpp  combos.cpp  compute_pnot0.cpp  dimension_tree.cpp  drift.cpp  endpoint.h  estimate_fitness_dist.cpp  estimate_shared_terminations.cpp  estimate_zero_fits.cpp  evolve.cpp  evolve_bybits.cpp  evolve_fit_genome.cpp  evolve_onegen.cpp  fitness.h  fitness0.h  fitness1.h  fitness2.h  fitness3.h  fitness4.h  fitness5.h  fitness6.h  fitness7.h  fitness8.h  flip_stats.cpp  genome2str.cpp  h_m.cpp  lib.h  mutatestream.cpp  mutation.cpp  mutation.h  nullmodel.cpp  onestate.cpp  prob_fitinc.cpp  proprandomfits.cpp  showfitness.cpp  showselected.cpp  (+1 more)
simsj/tests/: CMakeLists.txt  genome2str.cpp  hamming.cpp  hamming_genome.cpp  statechange.cpp  str2genome.cpp  test_thousand.cpp
simsw/: net.h  (+12 more)
tests/: CMakeLists.txt  genome2str.cpp  quine.cpp  state2string2state.cpp  test_fitness.cpp  test_thousand.cpp  testfit.cpp  thousand_genomes.csv
(+717 files in other folders)
